runs the script correctly as part of the build

--- a/xcodegen.yml
+++ b/xcodegen.yml
@@ -47,6 +47,10 @@ targets:
         UIApplicationSceneManifest:
           UIApplicationSupportsMultipleScenes: false
         ITSAppUsesNonExemptEncryption: false
+    preBuildScripts:
+    -
+      name: "Swish: generateCode"
+      script: xcrun --sdk macosx mint run -m ${PROJECT_DIR}/Mintfile swish generate
   AppTests:
     type: bundle.unit-test
     platform: iOS
